reduccion de dataset para el sistema de recomendacion

--- a/ml.ipynb
+++ b/ml.ipynb
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\clari\\AppData\\Local\\Temp\\ipykernel_4092\\3492386156.py:1: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\clari\\AppData\\Local\\Temp\\ipykernel_3996\\3492386156.py:1: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  movies = pd.read_csv('./ETL/movies_limpio.csv')\n"
      ]
     },
@@ -30,7 +30,7 @@
        "(45291, 23)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +58,8 @@
     "recomendacion = recomendacion[recomendacion['popularity'] != 0]#saco los que son valor 0\n",
     "\n",
     "#filtro para achicar la muestra ya que ocupa mucho espacio al crear la matriz. \n",
-    "# Dejando asi las peliculas con popularity > 4 (asi el usuario recibe una recomendacion de calidad)\n",
-    "recomendacion_filtrado = recomendacion[recomendacion['popularity'] > 4]\n",
+    "# Dejando asi las peliculas con popularity > 10 (asi el usuario recibe una recomendacion de calidad)\n",
+    "recomendacion_filtrado = recomendacion[recomendacion['popularity'] > 10]\n",
     "#print(recomendacion_filtrado)\n",
     "\n",
     "#reseteo el index para que al consultar una pelicula el index coincida con la totalidad de las peliculas filtradas\n",
@@ -73,16 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10778, 4)"
+       "(3016, 4)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>popularity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Minions</td>\n",
+       "      <td>Minions Stuart, Kevin and Bob are recruited by...</td>\n",
+       "      <td>547.488298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Wonder Woman</td>\n",
+       "      <td>An Amazon princess comes to the world of Man t...</td>\n",
+       "      <td>294.337037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Beauty and the Beast</td>\n",
+       "      <td>A live-action adaptation of Disney's version o...</td>\n",
+       "      <td>287.253654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Baby Driver</td>\n",
+       "      <td>After being coerced into working for a crime b...</td>\n",
+       "      <td>228.032744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Big Hero 6</td>\n",
+       "      <td>The special bond that develops between plus-si...</td>\n",
+       "      <td>213.849907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3011</th>\n",
+       "      <td>The Dead Lands</td>\n",
+       "      <td>Hongi, a Maori chieftain’s teenage son, must a...</td>\n",
+       "      <td>10.001517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3012</th>\n",
+       "      <td>All About My Mother</td>\n",
+       "      <td>A single mother in Madrid sees her only son di...</td>\n",
+       "      <td>10.000915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3013</th>\n",
+       "      <td>Project X</td>\n",
+       "      <td>A young inductee into the military is given th...</td>\n",
+       "      <td>10.000775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3014</th>\n",
+       "      <td>Scream 4</td>\n",
+       "      <td>Sidney Prescott, now the author of a self-help...</td>\n",
+       "      <td>10.000721</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3015</th>\n",
+       "      <td>Nine Lives</td>\n",
+       "      <td>A stuffy businessman finds himself trapped ins...</td>\n",
+       "      <td>10.000208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3016 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     title                                           overview  \\\n",
+       "0                  Minions  Minions Stuart, Kevin and Bob are recruited by...   \n",
+       "1             Wonder Woman  An Amazon princess comes to the world of Man t...   \n",
+       "2     Beauty and the Beast  A live-action adaptation of Disney's version o...   \n",
+       "3              Baby Driver  After being coerced into working for a crime b...   \n",
+       "4               Big Hero 6  The special bond that develops between plus-si...   \n",
+       "...                    ...                                                ...   \n",
+       "3011        The Dead Lands  Hongi, a Maori chieftain’s teenage son, must a...   \n",
+       "3012   All About My Mother  A single mother in Madrid sees her only son di...   \n",
+       "3013             Project X  A young inductee into the military is given th...   \n",
+       "3014              Scream 4  Sidney Prescott, now the author of a self-help...   \n",
+       "3015            Nine Lives  A stuffy businessman finds himself trapped ins...   \n",
+       "\n",
+       "      popularity  \n",
+       "0     547.488298  \n",
+       "1     294.337037  \n",
+       "2     287.253654  \n",
+       "3     228.032744  \n",
+       "4     213.849907  \n",
+       "...          ...  \n",
+       "3011   10.001517  \n",
+       "3012   10.000915  \n",
+       "3013   10.000775  \n",
+       "3014   10.000721  \n",
+       "3015   10.000208  \n",
+       "\n",
+       "[3016 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recomendacion_filtrado"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "IMPORTANTE: Debido a la poca capacidad de Render, tuve que reducir el dataset a 3mil datos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +261,7 @@
        "'The Bad Batch'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,16 +309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\" Las peliculas similares para el titulo 'The bad batch' son:  ['The Texas Chainsaw Massacre 2', 'A Boy and His Dog', 'Turbo Kid', 'Humpday', 'Beyond the Reach'].\""
+       "\" Las peliculas similares para el titulo 'The bad batch' son:  ['Turbo Kid', 'Beyond the Reach', 'Bone Tomahawk', 'Stranger Than Fiction', 'Mine'].\""
       ]
      },
-     "execution_count": 46,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
