reduccion de dataset

--- a/ml.ipynb
+++ b/ml.ipynb
@@ -20,14 +20,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\clari\\AppData\\Local\\Temp\\ipykernel_3996\\3492386156.py:1: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\clari\\AppData\\Local\\Temp\\ipykernel_8984\\3492386156.py:1: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  movies = pd.read_csv('./ETL/movies_limpio.csv')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(45291, 23)"
+       "(45291, 21)"
       ]
      },
      "execution_count": 2,
@@ -252,27 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The Bad Batch'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "recomendacion_filtrado['title'][20]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,22 +289,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\" Las peliculas similares para el titulo 'The bad batch' son:  ['Turbo Kid', 'Beyond the Reach', 'Bone Tomahawk', 'Stranger Than Fiction', 'Mine'].\""
+       "\" Las peliculas similares para el titulo 'Final destination' son:  ['Bounce', 'Bone Tomahawk', 'The Grey', 'Unknown', 'Super 8'].\""
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recomendar_peliculas('The Bad Batch')"
+    "recomendar_peliculas('Final Destination')"
    ]
   },
   {
@@ -346,25 +326,21 @@
     }
    ],
    "source": [
-    "#pruebo si me funciona con la primer pelicula de la lista\n",
+    "'''\n",
+    "# pruebo si me funciona con la primer pelicula de la lista\n",
     "data = recomendacion_filtrado\n",
     "df = pd.DataFrame(data)\n",
-    "\n",
-    "# Creoar representaciones numéricas de las descripciones de películas\n",
+    "# Creo representaciones numéricas de las descripciones de películas\n",
     "vectorizer = TfidfVectorizer()\n",
     "tfidf_matrix = vectorizer.fit_transform(df[\"overview\"])\n",
-    "\n",
     "# Calculo la similitud del coseno entre las descripciones de películas\n",
     "similarity_matrix = cosine_similarity(tfidf_matrix, tfidf_matrix)\n",
-    "\n",
     "# Obtengo las películas más similares a la pelicula (primer película en la lista)\n",
     "target_movie_index = 0\n",
     "similar_movies_indices = similarity_matrix[target_movie_index].argsort()[::-1][1:6]\n",
-    "\n",
-    "\n",
     "print(\"Películas similares a\", df.iloc[target_movie_index][\"title\"])\n",
     "for index in similar_movies_indices:\n",
-    "    print(\"- \", df.iloc[index][\"title\"])\n"
+    "    print(\"- \", df.iloc[index][\"title\"])'''\n"
    ]
   }
  ],
