--- a/ETL/etl_credits.ipynb
+++ b/ETL/etl_credits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "4  [{'credit_id': '52fe44959251416c75039ed7', 'de...  11862  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>[{'cast_id': 1, 'character': 'Savannah 'Vannah...</td>\n",
+       "      <td>[{'cast_id': 1, 'character': \"Savannah 'Vannah...</td>\n",
        "      <td>[{'credit_id': '52fe44779251416c91011acb', 'de...</td>\n",
        "      <td>31357</td>\n",
        "    </tr>\n",
@@ -246,7 +246,7 @@
        "0      [{'cast_id': 14, 'character': 'Woody (voice)',...   \n",
        "1      [{'cast_id': 1, 'character': 'Alan Parrish', '...   \n",
        "2      [{'cast_id': 2, 'character': 'Max Goldman', 'c...   \n",
-       "3      [{'cast_id': 1, 'character': 'Savannah 'Vannah...   \n",
+       "3      [{'cast_id': 1, 'character': \"Savannah 'Vannah...   \n",
        "4      [{'cast_id': 1, 'character': 'George Banks', '...   \n",
        "...                                                  ...   \n",
        "45471  [{'cast_id': 0, 'character': '', 'credit_id': ...   \n",
@@ -271,7 +271,7 @@
        "[45439 rows x 3 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#exporto los df creados a csv\n",
+    "#exporto los df creados a csv (elimine las columnas innecesarias ya que render solo nos da 512mb)\n",
     "cast_df.to_csv('cast.csv')\n",
     "crew_df.to_csv('crew.csv')"
    ]
